--- a/css/style.css
+++ b/css/style.css
@@ -2830,12 +2830,12 @@ h3 {
 
 /* line 58, C:/Users/SPN Graphics/Desktop/CL September/210 Medical/HTML/scss/_tesmonial.scss */
 .testmonial_bg_1 {
-  background-image: url(/img/testmonial/1.jpg);
+  background-image: url(../img/testmonial/1.jpg);
 }
 
 /* line 61, C:/Users/SPN Graphics/Desktop/CL September/210 Medical/HTML/scss/_tesmonial.scss */
 .testmonial_bg_2 {
-  background-image: url(/img/testmonial/2.jpg);
+  background-image: url(../img/testmonial/2.jpg);
 }
 
 /* line 1, C:/Users/SPN Graphics/Desktop/CL September/210 Medical/HTML/scss/_service.scss */
